--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <aside class="w-64 bg-white p-4 shadow">
       <nav>
         <a href="/" class="block py-2"><i class="fas fa-home"></i> <span data-lang="en">Home</span><span data-lang="hi" style="display:none;">होम</span></a>
-        <a href="/admin/index.html" target="_blank" class="block py-2"><i class="fas fa-user-shield"></i> <span data-lang="en">Admin Panel</span><span data-lang="hi" style="display:none;">एडमिन पैनल</span></a>
+        <a href="/admin.html" target="_blank" class="block py-2"><i class="fas fa-user-shield"></i> <span data-lang="en">Admin Panel</span><span data-lang="hi" style="display:none;">एडमिन पैनल</span></a>
       </nav>
       <div class="mt-4">
         <label for="language" class="block">Language:</label>
